--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask
-flask-cors
-scikit-learn
-imbalanced-learn
-joblib
-pandas
-gunicorn
+flask==2.0.1
+flask-cors==3.0.10
+scikit-learn==1.0.2
+pandas==1.3.3
+numpy==1.21.2
+joblib==1.1.0
+imbalanced-learn==0.8.1
+gunicorn==20.1.0
